# bucket_simulator

./: .gitignore  .gitmodules  BOUNDARY_ANCILLAS_ANALYSIS.md  CMakeLists.txt  README.md
configs/: bucket_test.txt  d19_aggressive.txt  d19_auto_bias.txt  d19_comparison_bucket.txt  d19_comparison_mc.txt  d19_truncated.txt  d5_comparison_bucket.txt  d5_comparison_mc.txt  d7_test.txt  distill_dejmps.txt  distill_none.txt  distill_pumping.txt  distributed_bucket_10M.txt  distributed_bucket_large.txt  distributed_bucket_test.txt  distributed_mc_10M.txt  distributed_mc_large.txt  distributed_test.txt  entanglement_fast.txt  entanglement_limited.txt  example.txt  mc_comparison.txt  monolithic_test.txt  radar_test.txt  radar_test_2to1.txt  superstab_border.txt  superstab_border2.txt  superstab_middle.txt  superstab_nosuper.txt  superstab_twoside.txt  test.txt  test_bucket.txt  test_distributed_ls_d3.txt  test_distributed_ls_d5.txt  test_lattice_surgery.txt  test_lattice_surgery_d3.txt  test_lattice_surgery_d5.txt  test_lattice_surgery_d7.txt  test_mc.txt  test_memory_experiment.txt
include/: bucket_sampler.hpp  config.hpp  decoder.hpp  dem_analyzer.hpp  distributed_lattice_surgery.hpp  lattice_surgery.hpp  simulator.hpp
output/: debug_d5_circuit.stim  distributed_ls_d3.stim  distributed_ls_d3_allow_gauge.dem  distributed_ls_d5.stim  distributed_ls_d5_pragma.stim  generated_circuit.stim  generated_circuit_d5.stim  generated_d3_with_detectors.stim  lattice_surgery_d3_xx.stim  lattice_surgery_d5.stim  lattice_surgery_d5_with_corners.stim  lattice_surgery_d5_with_detectors.stim  (+9 more)
(+542 files in other folders)
